Emergency overflow bug fixes

--- a/src/styles/ProjectsIntro.css
+++ b/src/styles/ProjectsIntro.css
@@ -49,4 +49,12 @@
     .intro-boundary {
         width: 80%;
     }
+
+    .left-boundary {
+        margin-left: 0%;
+    }
+
+    .right-boundary {
+        margin-right: 0%;
+    }
 }
